@@ -19,6 +19,8 @@ TODO :
 	std/int32 : fixed need_32_bits macro (negative values)
 	bugfix : >> and >>> were reversed in JIT
 	bugfix : date functions are now MT-safe
+	removed context.h and context.c
+	added lock and tls multithread API to neko.h
 
 2008-03-16 : 1.7.0
 	nekoc : allow binary ast format with -p, don't allow inline nxml
